services/edge-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-proxy
  labels:
    app: edge-proxy
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 10808
  selector:
    app: edge-proxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edge-proxy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: edge-proxy
            servicePort: 10808
          path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-proxy
  labels:
    app: edge-proxy
    spire-discover: edge-proxy
spec:
  selector:
    matchLabels:
      app: edge-proxy
  template:
    metadata:
      labels:
        app: edge-proxy
        spire-discover: edge-proxy
    spec:
      containers:
      - name: edge-proxy
        image: zoemccormick/spire-envoy-example:ingress
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 10808
        - name: envoy-admin
          containerPort: 8001
        volumeMounts:
        - name: spire-socket
          mountPath: /run/spire/socket
          readOnly: false
      volumes:
      - name: spire-socket
        hostPath:
          path: /run/spire/socket
          type: DirectoryOrCreate
